vlib/v/checker/tests/match_alias_type_err.out
vlib/v/checker/tests/match_alias_type_err.vv:5:10: notice: unused parameter: `sql_`
    3 | struct SelectStmt {}
    4 | 
    5 | fn parse(sql_ string) Stmt {
      |          ~~~~
    6 |     return SelectStmt{}
    7 | }
vlib/v/checker/tests/match_alias_type_err.vv:13:3: error: cannot match alias type `Stmt` with `SelectStmt`
   11 | 
   12 |     match stmt {
   13 |         SelectStmt { panic('select') }
      |         ~~~~~~~~~~
   14 |         else { /* why? */ }
   15 |     }
